--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "0.0.1",
   "description": "how to implementation webpack",
   "main": "./lib/index.js",
+  "keywords": [
+    "webpack",
+    "mini-webpack"
+  ],
+  "author": "Rain120",
+  "license": "MIT",
+  "bin": {
+    "pack": "./bin/webpack.js"
+  },
   "repository": {
     "git": "git",
     "author": "Rain120",
@@ -10,19 +19,47 @@
   },
   "homepage": "https://github.com/Rain120/mini-webpack",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint --fix --color --ext .ts lib/**",
+    "prettier": "prettier --write lib/**/**.ts",
+    "lint-staged": "lint-staged"
   },
-  "keywords": [
-    "webpack",
-    "mini-webpack"
-  ],
-  "author": "Rain120",
-  "license": "MIT",
+  "lint-staged": {
+    "lib": [
+      "npm run prettier",
+      "npm run eslint",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": [
+        "lint-staged"
+      ],
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@babel/core": "^7.9.6",
     "@babel/parser": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/traverse": "^7.9.6",
+    "commander": "^5.1.0",
     "tapable": "^1.1.3"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "chalk": "^4.0.0",
+    "eslint": "^7.1.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.6",
+    "typescript": "^3.9.3"
   }
 }
