--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mini-webpack",
   "version": "0.0.1",
-  "description": "how to implementation webpack",
+  "description": "How to achieve webpack",
   "main": "./lib/index.js",
   "keywords": [
     "webpack",
@@ -19,14 +19,15 @@
   },
   "homepage": "https://github.com/Rain120/mini-webpack",
   "scripts": {
-    "eslint": "eslint --fix --color --ext .ts lib/**",
-    "prettier": "prettier --write lib/**/**.ts",
-    "lint-staged": "lint-staged"
+    "eslint": "eslint --fix --color lib/**",
+    "prettier": "prettier --write lib/**/**",
+    "lint-staged": "lint-staged",
+    "test": "jest"
   },
   "lint-staged": {
     "lib": [
-      "npm run prettier",
       "npm run eslint",
+      "npm run prettier",
       "git add"
     ]
   },
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/jest": "^25.2.3",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "chalk": "^4.0.0",
@@ -59,7 +61,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.6",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.0.0",
     "typescript": "^3.9.3"
   }
 }
