--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/Rain120/mini-webpack",
   "scripts": {
-    "eslint": "eslint --fix --color lib/**",
-    "prettier": "prettier --write lib/**/**",
+    "eslint": "eslint --fix --color lib/** loaders/** plugins/**",
+    "prettier": "prettier --write lib/**/** loaders/** plugins/**",
     "lint-staged": "lint-staged",
     "test": "jest"
   },
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/traverse": "^7.9.6",
     "commander": "^5.1.0",
+    "loader-utils": "^2.0.0",
     "tapable": "^1.1.3"
   },
   "devDependencies": {
