--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mini-webpack",
   "version": "0.0.1",
   "description": "How to achieve webpack",
-  "main": "./lib/index.js",
+  "main": "./lib/cli.js",
   "keywords": [
     "webpack",
     "mini-webpack"
@@ -40,18 +40,21 @@
     }
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/parser": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/traverse": "^7.9.6",
+    "@babel/core": "^7.10.2",
+    "@babel/parser": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/traverse": "^7.10.1",
     "commander": "^5.1.0",
     "loader-utils": "^2.0.0",
+    "memory-fs": "^0.5.0",
+    "mkdirp": "^1.0.4",
     "tapable": "^1.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.13",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "chalk": "^4.0.0",
@@ -66,6 +69,8 @@
     "lint-staged": "^10.2.6",
     "prettier": "^2.0.5",
     "ts-jest": "^26.0.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
