--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mini-webpack",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "How to achieve webpack",
   "main": "./lib/cli.js",
   "keywords": [
@@ -45,6 +45,8 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/traverse": "^7.10.1",
     "commander": "^5.1.0",
+    "enhanced-resolve": "^4.1.1",
+    "loader-runner": "^3.1.0",
     "loader-utils": "^2.0.0",
     "memory-fs": "^0.5.0",
     "mkdirp": "^1.0.4",
@@ -58,6 +60,7 @@
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "chalk": "^4.0.0",
+    "css-loader": "^3.6.0",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
@@ -68,6 +71,7 @@
     "jest": "^26.0.1",
     "lint-staged": "^10.2.6",
     "prettier": "^2.0.5",
+    "style-loader": "^1.2.1",
     "ts-jest": "^26.0.0",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
